css/nav.css
#navbar {
    margin: 0 auto;
    /* background-color: rgba(255,255,255,.3); */
    display: flex;
    flex-direction: column;
    text-align: center;
    /* width: 100%; */
}

.dropdownmenu ul, .dropdownmenu li {
	margin: 0;
	padding: 0;
}
.dropdownmenu ul {
	background: rgba(255,255,255,.5);
	list-style: none;
	width: 100%;
}
.dropdownmenu li {
	float: left;
	position: relative;
	width:auto;
}
.dropdownmenu a {
	/* background:rgba(255,255,255,.3); */
	color: rgba(255,255,255,5);
	display: block;
	font: bold 12px/20px sans-serif;
	padding: 10px 25px;
	text-align: center;
	text-decoration: none;
	-webkit-transition: all .25s ease;
	-moz-transition: all .25s ease;
	-ms-transition: all .25s ease;
	-o-transition: all .25s ease;
	transition: all .25s ease;
}
.dropdownmenu li:hover a {
	background: rgba(255,255,255,.3);
}
#submenu {
    margin: 0 auto;
	left: 0;
	opacity: 0;
	position: absolute;
	top: 35px;
	visibility: hidden;
	/* z-index: -3; */
}
li:hover ul#submenu {
	opacity: 1;
	top: 40px;	/* adjust this as per top nav padding top & bottom comes */
	visibility: visible;
}
#submenu li {
    /* display: flex;
    justify-content: center; */
	float: none;
}
#submenu a:hover {
	background: rgba(255,255,255,.3);
}
#submenu a {
	background-color:rgba(255,255,255,.1);
}

